<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".Fragments.AddWatchlist">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_watchlist"
        android:textColor="@color/white"
        android:textSize="@dimen/heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp"
        android:background="@drawable/layout_border"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_border"
            android:backgroundTint="@color/lightgray"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/search_stock"
            android:inputType="textCapWords"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/subheading"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:orientation="horizontal"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:weightSum="4"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/stock_symbol"
                    android:textColor="@color/gray500"
                    android:textSize="@dimen/text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/ask_price"
                    android:textColor="@color/gray500"
                    android:textSize="@dimen/text" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/bid_price"
                    android:textColor="@color/gray500"
                    android:textSize="@dimen/text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/last_price"
                    android:textColor="@color/gray500"
                    android:textSize="@dimen/text" />

            </LinearLayout>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scrollbars="none" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="@color/white"
        android:elevation="10dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_stockgrowth"
                android:layout_weight="0.3"/>

            <EditText
                android:id="@+id/edtWatchlistName"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1.7"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/watchlist_name"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="@dimen/subheading" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_watchlist"
        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/delete_watchlist"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>